--- a/fechamento-caixa/index.html
+++ b/fechamento-caixa/index.html
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<img style="position: absolute; top: 15px;" width="80" src="logo.png">
-				<h1 style="padding: 20px 0 20px 100px;">Fechamento de Contas</h1>
+				<h1 style="padding: 20px 0 20px 100px;">Relatório de Fechamento de Caixa</h1>
 			</div>
 		</div>
 		
