--- a/acompanhamento-pedido-compra/index.html
+++ b/acompanhamento-pedido-compra/index.html
@@ -16,18 +16,16 @@
 	<link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.4.2/css/buttons.bootstrap.min.css">
 	
 	<style>
-		body {
-			font-size: 12px !important;
-		}
-		
 		.circulo {
-	
 			border-radius: 200px;
 			width: 10px; height: 10px;
 			position:relative;
 			top: 0; left: 0;
 			display: inline-block !important;
-
+		}
+		
+		table td {
+			text-align: left;
 		}
 		
 		.circulo-success {
@@ -44,9 +42,7 @@
 		
 		.circulo-danger {
 			background-color: #d9534f;
-		}		
-		
-		
+		}
 	</style>
 </head>
 
@@ -105,9 +101,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 	<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
-	<script src="https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js" charset="utf-8"></script>
-	<script src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.bootstrap.min.js" charset="utf-8"></script>
-	<script src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.colVis.min.js" charset="utf-8"></script>
+	<script src="https://cdn.datatables.net/buttons/1.5.0/js/dataTables.buttons.min.js" charset="utf-8"></script>
+	<script src="https://cdn.datatables.net/buttons/1.5.0/js/buttons.bootstrap.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js" charset="utf-8"></script>
+	<script src="https://cdn.datatables.net/buttons/1.5.0/js/buttons.html5.min.js" charset="utf-8"></script>
 
 	<script>
 			Number.prototype.pad = function(size) {
@@ -146,13 +145,14 @@
 			}
 			
 			var table = $('#example').DataTable({
-			data: data,
 				dom: 'Bfrtip',
-				"columnDefs": [{
-					targets: 6,
-					className: 'text-left'
-				}],
-				"buttons": [],
+				data: data,
+				buttons: [
+					'copyHtml5',
+					'excelHtml5',
+					'csvHtml5',
+					'pdfHtml5'
+				],
 				"language": {
 					"sEmptyTable": "Nenhum registro encontrado",
 					"sInfo": "Mostrando de _START_ até _END_ de _TOTAL_ registros",
