adiciona texto "totai"

--- a/fechamento-caixa/index.html
+++ b/fechamento-caixa/index.html
@@ -51,8 +51,8 @@
 										<th>Vl ConnectCar</th>
 										<th>Recebido ConnectCar</th>
 										<th>Vl Convênio</th>
-										<th>Qt Avulso</th>
-										<th>Vl Avulso</th>
+										<th>Qt Avulso Totais</th>
+										<th>Vl Avulso Totais</th>
 										<th>Qt Isento</th>
 										<th>Qtd Diária</th>
 										<th>Vl Diária</th>
@@ -77,8 +77,8 @@
 										<th>Vl ConnectCar</th>
 										<th>Recebido ConnectCar</th>
 										<th>Vl Convênio</th>
-										<th>Qt Avulso</th>
-										<th>Vl Avulso</th>
+										<th>Qt Avulso Totais</th>
+										<th>Vl Avulso Totais</th>
 										<th>Qt Isento</th>
 										<th>Qtd Diária</th>
 										<th>Vl Diária</th>
