--- a/solicitacao-compras/index.html
+++ b/solicitacao-compras/index.html
@@ -8,7 +8,7 @@
 	
 	<body>
 		<div class="container">
-			<img style="position: absolute; top: 15;" width="80" src="logo.png">
+			<img style="position: absolute; top: 15px;" width="80" src="logo.png">
 			<h1 style="padding: 20px 0 20px 100px;">Solicitação de Compra</h1>
 		
 			<form name="form" role="form">
