--- a/solicitacao-compras/index.html
+++ b/solicitacao-compras/index.html
@@ -170,6 +170,13 @@
 											</select>
 										</div>
 									</div>
+									
+									<div class="col-xs-12 col-sm-8 col-md-9">
+										<div class="form-group">
+											<label>Anexo</label>
+											<input type="file">
+										</div>
+									</div>
 								</div>
 							</div><!-- /.panel-body -->
 						
